[package]
name = "factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
nom_locate = "4.2.0"
nom-recursive = "0.5.0"
derive_builder = "0.12.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
